[gd_scene load_steps=7 format=3 uid="uid://chgbc048ycjqu"]

[ext_resource type="Script" uid="uid://cyt65mk1csxsu" path="res://Level1/level1Soundtrack/music_manager.gd" id="1_slthk"]

[sub_resource type="AudioStream" id="AudioStream_slthk"]

[sub_resource type="Animation" id="Animation_hl8mq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("calmTrack:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("calmTrack:pitch_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HeavyTrack:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-2.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HeavyTrack:pitch_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_slthk"]
resource_name = "fadeToCalm"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("calmTrack:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-80.0, -8.0, -8.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("calmTrack:pitch_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HeavyTrack:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-2.0, -2.0, -80.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HeavyTrack:pitch_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.9]
}

[sub_resource type="Animation" id="Animation_71fn3"]
resource_name = "fadeToCombat"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("calmTrack:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-8.0, -8.0, -80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("calmTrack:pitch_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.9, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HeavyTrack:pitch_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.9, 1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HeavyTrack:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 0.93303305, 1),
"update": 0,
"values": [-80.0, -2.0, -2.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1qm6j"]
_data = {
&"RESET": SubResource("Animation_hl8mq"),
&"fadeToCalm": SubResource("Animation_slthk"),
&"fadeToCombat": SubResource("Animation_71fn3")
}

[node name="musicManager" type="Node2D"]
script = ExtResource("1_slthk")

[node name="calmTrack" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStream_slthk")
volume_db = -80.0
bus = &"playerBus"

[node name="HeavyTrack" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStream_slthk")
volume_db = -2.0
bus = &"playerBus"

[node name="songFader" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1qm6j")
}

[connection signal="finished" from="calmTrack" to="." method="_on_calm_track_finished"]
[connection signal="finished" from="HeavyTrack" to="." method="_on_heavy_track_finished"]
